--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,5 +11,19 @@ body {
 }
 
 .wrapper {
+  max-width: 1536px;
   padding: 0 2.5rem;
+  margin: 0 auto;
+}
+
+.btn {
+  min-width: 194px;
+  padding: 11px 16px 9px;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.btn--dark {
+  background-color: var(--black);
+  color: var(--white);
 }
